// protoc.exe -I=<include folder> -I=. --csharp_out=. Stats.proto

syntax = "proto3";

package ss.core.persist.protobuf;
option csharp_namespace = "SS.Core.Persist.Protobuf";

import "google/protobuf/duration.proto";
import "google/protobuf/timestamp.proto";

message StatInfo {
	oneof stat_info {
		int32 int32Value = 1;
		uint32 uint32Value = 2;
		int64 int64Value = 3;
		uint64 uint64Value = 4;
		sint32 sint32Value = 5;
		sint64 sint64Value = 6;
		fixed32 fixed32Value = 7;
		fixed64 fixed64Value= 8;
		sfixed32 sfixed32Value = 9;
		sfixed64 sfixed64Value = 10;
		google.protobuf.Timestamp timestamp = 11;
		google.protobuf.Duration duration = 12;
		//double doubleValue = 14;
		//float floatValue = 15;
	};
}

message PlayerStats {
	map<int32, StatInfo> statMap = 1;
}

message EndingTime {
	google.protobuf.Timestamp endingTimestamp = 1;
}
